cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj9_TupleStruct_1.plcfunc
FUNCTION proj9_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj9_TupleStruct_1 := tuple.field9;
END_FUNCTION
